--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -27,4 +27,5 @@ jobs:
         uses: distributhor/workflow-webhook@v2
         env:
           webhook_url: https://ec5c-88-137-66-103.ngrok.io
+          webhook_secret: "Y0uR5ecr3t"
           
