--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Invoke deployment hook
         uses: distributhor/workflow-webhook@v2
         env:
+          webhook_type: 'json-extended'
           webhook_url: https://ec5c-88-137-66-103.ngrok.io/runner
           webhook_secret: "Y0uR5ecr3t"
           
