--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -11,6 +11,7 @@ on:
   pull_request_review:
   pull_request_review_comment:
   push:
+  workflow_run:
   
 
   # Allows you to run this workflow manually from the Actions tab
