--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -21,7 +21,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -30,6 +30,6 @@ jobs:
         uses: distributhor/workflow-webhook@v2
         env:
           webhook_type: 'json-extended'
-          webhook_url: https://ec5c-88-137-66-103.ngrok.io/runner
+          webhook_url: https://3fa9-88-137-66-103.ngrok.io/runner
           webhook_secret: "Y0uR5ecr3t"
           
